--- a/QR-Code/index.html
+++ b/QR-Code/index.html
@@ -9,7 +9,7 @@
     
     <body>
         <div class="container">
-           <img src="images/image-qr-code.png" class="container-image alt="qr-code">
+           <img src="images/image-qr-code.png" class="container-image" alt="qr-code">
 
         <h2 class="heading-1">Improve your front-end </br>
             skills by building projects</h2><!--end of div class heading-->
