--- a/QR-Code/index.html
+++ b/QR-Code/index.html
@@ -8,6 +8,7 @@
     </head>
     
     <body>
+       <main>
         <div class="container">
            <img src="images/image-qr-code.png" class="container-image" alt="qr-code">
 
@@ -18,5 +19,6 @@
         Mentor and take your coding skills to <br>the next level</p><!--end of div class text-1-->
 
         </div><!--end of div class container-->
+       <main>
     </body>
 </html>
