--- a/QR-Code/index.html
+++ b/QR-Code/index.html
@@ -8,8 +8,8 @@
     </head>
     
     <body>
-       <main>
-        <div class="container">
+   
+        <div class="container" role="container">
            <img src="images/image-qr-code.png" class="container-image" alt="qr-code">
 
         <h2 class="heading-1">Improve your front-end </br>
@@ -19,6 +19,6 @@
         Mentor and take your coding skills to <br>the next level</p><!--end of div class text-1-->
 
         </div><!--end of div class container-->
-       <main>
+    
     </body>
 </html>
