--- a/QR-Code/index.html
+++ b/QR-Code/index.html
@@ -9,7 +9,7 @@
     
     <body>
    
-        <div class="container" role="container">
+        <div class="main" role="main">
            <img src="images/image-qr-code.png" class="container-image" alt="qr-code">
 
         <h2 class="heading-1">Improve your front-end </br>
